--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,183 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(140, 141, 156);
+    margin: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+    overflow: hidden;
+    background-color: #35404e;
+    min-width: 1100px;
+}
+  
+.navbar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 14px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navbar a.active {
+    background-color: #00357a;
+    color: white;
+}
+
+.navbar a:hover {
+    background: #ddd;
+    color: black;
+}
+
+.navbar-right  a{
+    float: right;
+    padding: 7px 25px;
+}
+
+.banner-background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://drive.google.com/uc?id=1Zbt-kDEntF_QcqrlYVnNd_l0IO7WVF3t");
+    height: 50%;
+    background-position: center;
+    background-size: cover;
+}
+
+.banner-logo {
+    margin: 0px 200px 0px 200px;
+    text-align: center;
+    display: block;
+    min-width: 700px;
+}
+
+.banner-logo img{
+    max-width: 100%;
+}
+
+.main {
+    margin: 0px 200px 0px 200px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    background-color: #f2f2f2;
+    min-width: 600px;
+    overflow: auto;
+}
+
+.content p {
+    font-size: 25px;
+}
+
+.footer {
+    padding: 25px 50px 25px 50px;
+    border-top: solid 1px rgb(140, 141, 156);
+    min-width: 600px;
+    background-color: #f2f2f2;
+    display: grid;
+    align-content: space-evenly;
+    grid-template-columns: auto auto auto;
+    text-align: center;
+    text-decoration: none;
+}
+
+.footer a{
+    text-decoration: none;
+    color: rgb(140, 141, 156);
+}
+
+#profile-pic {
+    border-radius: 64px;
+    margin-right: 50px;
+    margin-bottom: 20px;
+    float: left;
+}
+
+.intro-text {
+    flex-direction: column;
+    text-indent: 50px;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+#latest-video {
+    overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+}
+
+.content  iframe {
+    border: 0;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+#resume-pdf {
+    overflow: hidden;
+    padding-top: 100%;
+    position: relative;
+}
+
+#download-resume {
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.contact-container {
+    margin: auto;
+    text-align: center;
+}
+
+#project-list a {
+    padding: 10px;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+#project-list p {
+    font-size: 20px;
+    min-width: 150px;
+    text-align: left;
+}
+
+.project-summary {
+    display: flex;
+    flex-direction: row;
+    border-top: solid 1px rgb(140, 141, 156);
+}
+
+#searchBar {
+    min-width: 300px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+
+.project-guide h1 {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.project-guide p {
+    text-indent: 50px;
+}
+
+.left-images {
+    float: left;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    max-width:100%;
+    height:auto;
+}
+
+.right-images {
+    float: right;
+    padding-left: 25px;
+    padding-bottom: 25px;
+    max-width:100%;
+    height:auto;
 }
