--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -1,19 +1,14 @@
 .content-container {
   display: flex;
   justify-content: space-around;
-  min-width: 500px;
-}
-
-.content-padding {
-  min-width: 50px;
+  min-width: 250px;
 }
 
 .content {
   background-color: #f2f2f2;
   width: 100%;
-  min-width: 450px;
   min-height: 100px;
-  padding: 25px 25px 0px 25px;
+  padding: 25px 5px 0px 5px;
 }
 
 .content-inner-container {
@@ -21,11 +16,21 @@
   justify-content: space-around;
 }
 
-.content-inner-padding {
-  min-width: 50px;
-}
-
 .content-inner {
   display: flex;
   max-width: 1500px;
+}
+
+@media only screen and (min-width: 550px) {
+  .content {
+    padding: 25px 25px 0px 25px;
+  }
+
+  .content-padding {
+    min-width: 50px;
+  }
+
+  .content-inner-padding {
+    min-width: 50px;
+  }
 }
